Added logic for evaluating periodic and event triggered analyses

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/RunAnalysis/RunAnalysis/OSIsoft.AFSDK.dll
+/RunAnalysis/RunAnalysis/Library/OSIsoft.AFSDK.dll
